# Stryde

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: SUMMARY.md  config_file.md  theme.md
docs/src/: SUMMARY.md  config_file.md  keys.md
src/: main.rs  toml_files.rs
src/core/apps/: indexer.rs  mod.rs  model.rs  parser.rs  utils.rs
src/ui/: app.rs
src/ui/widgets/: input_with_list.rs  list_apps.rs  text_input.rs
