[package]
name = "stryde"
version = "0.2.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
freedesktop-file-parser = "0.3.1"
freedesktop-icons = "0.4.0"
bincode = "1.3.3"
serde = {version = "1.0.228", features = ["derive"]}
iced = {version = "0.14.0", default-features = false, features = ["tiny-skia", "image", "svg", "x11", "wayland", "thread-pool"]}
image = "0.25.9"
toml = "0.9.8"
softbuffer = "0.4.6"
winit = { version = "0.30.12", features = ["x11", "wayland"]}
